--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+python==3.10
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 Django==4.1
+pip==20.1.1
+setuptools==47.1.0
 sqlparse==0.4.2
 tzdata==2022.1
